--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "shopify-gatsby-starter",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A starter project that closely follows the Shopify Theme structure. This is ideal for migrating existing Shopify sites to a headless solution.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Kenneth Lyerly <hey@ken.dev>",
   "dependencies": {
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.16",
@@ -12,17 +12,21 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-source-filesystem": "^2.3.25",
+    "gatsby-source-shopify": "^3.2.29",
     "gatsby-transformer-sharp": "^2.5.13",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "shopify-buy": "^2.11.0"
   },
   "devDependencies": {
     "prettier": "2.1.0"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "shopify",
+    "headless"
   ],
   "license": "0BSD",
   "scripts": {
@@ -36,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/kenput3r/shopify-gatsby-starter"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
